syntax = "proto3";
package calculator;
option go_package="./calculator/calculatorpb;pb";

message SumRequest {
    int32 first_number = 1;
    int32 second_number = 2;
}

message SumResponse {
    int32 sum_result = 1;
}

message PrimeNumberRequest {
    int64 number = 1;
}

message PrimeNumberResponse {
    int64 prime_factor = 1;
}

message ComputeAverageRequest {
    int32 number = 1;
}

message ComputeAverageResponse {
    double average  = 1;
}

service CalculatorService {
    //Unary
    rpc Sum(SumRequest) returns (SumResponse) {};
    //server Streaming
    rpc PrimeNumber(PrimeNumberRequest) returns (stream PrimeNumberResponse) {};
    // Client Streaming
    rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse) {};
}
/*

export GOROOT=/usr/local/go
export GOPATH=$HOME/go
export GOBIN=$GOPATH/bin
export PATH=$PATH:$GOROOT:$GOPATH:$GOBIN


*/